src/tests/InvalidTests/VariableDeclaration2.agl
cellSize : Number = 200;

cellSize : String = "Joao"; # Error. Variable "cellSize" already declared!
